set background to blue

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  background-color: #fff;
+  background-color: blue;
   color: #333;
 }
 
